# Flare-On

2024/10_CatbertRansomware/: crca.py  decompiler.py  decryptor.py  driver-decryptor.py  rc4.py
2024/1_frog/: README.md
2024/3_aray/: script.py
2024/7_fullspeed/: Program.cs
2024/9_serpentine/: plugin.py  script.py
2025/5_-_ntfsm2/: a.py  b.py
2025/7_-_The_Boss_Needs_Help/: a.py  b.py  iter.py
2025/8_-_FlareAuthenticator/: a.py  b.py  sol.py
2025/9_-_10000/: extract.cpp
2025/9_-_10000/sol/: CMakeLists.txt  get_mat.py  solve.py
2025/9_-_10000/sol/src/: CMakeLists.txt  fn_num_extract.cpp  func_extract.cpp  imports_extract.cpp  ops_extract.cpp  verify.cpp
